# ArcanAgent

./: .env.example  .gitignore  LICENSE  README.md  config.json  config.json.example  design.md  docker-compose.yml  main.py  project_structure.md  pyproject.toml  requirements.txt  simple_llm_test.py  test_bidirectional_links.py  test_context_manager.py  test_llm_client.py  test_tool_call_engine.py
backend/: Dockerfile  PROJECT_COMPLETION_REPORT.md  __init__.py  config.py  main.py  main_server.py  run_tests.py  settings.py  test_agent_optimization.py  test_llm_optimization.py  test_optimization_simple.py  test_performance.py  test_server.py  todo.md
backend/agents/: __init__.py  agent_orchestrator.py  base_agent.py  justice.py  optimized_agent_system.py  the_empress.py  the_hermit.py  the_high_priestess.py  the_magician.py
backend/agents/arcana/: __init__.py  justice.py  the_empress.py  the_hermit.py  the_high_priestess.py  the_star.py
backend/api/: __init__.py
backend/api/routes/: __init__.py  graph.py  learning.py  learning_complete.py  llm.py  notes.py  system.py
backend/core/: __init__.py  bidirectional_links.py  bidirectional_links_optimized.py  context_manager.py  context_manager_original.py  llm_client.py  llm_client_optimized.py  llm_initializer.py  tool_call_engine.py
backend/grag/: __init__.py  concept_linker.py  graph_engine.py  graph_updater.py  hybrid_search.py  triple_extractor.py  vector_store.py
backend/knowledge/: __init__.py  note_manager.py
backend/mcp/: __init__.py  capabilities.py  client.py  middleware.py  protocol.py  router.py  server.py
backend/obsidian_vault/: __init__.py  bidirectional_links.py  context_builder.py  fsrs_scheduler.py  link_graph.py  markdown_parser.py  path_finder.py  vault_manager.py
backend/tests/: pytest.ini  test_framework.py
backend/utils/: __init__.py
docs/: README.md
frontend/: Dockerfile  FRONTEND_SPEC.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
frontend/src/: App.tsx  main.tsx  vite-env.d.ts
frontend/src/components/arcana/: ArcanaCard.tsx  ArcanaGrid.tsx  LearningProgress.tsx  index.ts
frontend/src/components/layout/: Header.tsx  Layout.tsx  Navigation.tsx
frontend/src/components/ui/: Badge.tsx  Button.tsx  Card.tsx  Progress.tsx  Spinner.tsx  index.ts
frontend/src/hooks/: index.ts  useLearningSession.ts  useWebSocket.ts
frontend/src/pages/: HomePage.tsx  KnowledgeGraph.tsx  LearningHub.tsx  NotesManager.tsx  SystemConsole.tsx
frontend/src/services/: api.ts
frontend/src/styles/: globals.css
frontend/src/test/: setup.ts
frontend/src/types/: index.ts
frontend/src/utils/: constants.ts
knowledge_base/notes/: Welcome_to_ArcanAgent.md
specs/arcan_agent/: design.md  requirements.md  tasks.md
specs/general_design/: core.md  requirements.md
